css/styles.css
/* ... */
@font-face {
    font-family: 'Source Sans Pro';
    font-weight: light;
    src: url('/Orpps/assets/fonts/SourceSansPro-Light.ttf') format('truetype');
}

@font-face {
    font-family: 'Source Sans Pro';
    font-weight: light;
    font-style: italic;
    src: url('/Orpps/assets/fonts/SourceSansPro-LightItalic.ttf') format('truetype');
}

@font-face {
    font-family: 'Source Sans Pro';
    src: url('/Orpps/assets/fonts/SourceSansPro-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'Source Sans Pro';
    font-weight: semi-bold;
    src: url('/Orpps/assets/fonts/SourceSansPro-Semibold.ttf') format('truetype');
}

@font-face {
    font-family: 'Source Sans Pro';
    font-weight: semi-bold;
    font-style: italic;
    src: url('/Orpps/assets/fonts/SourceSansPro-SemiboldItalic.ttf') format('truetype');
}







/* --- Style de base pour les balise simple --- */
body {
    font-family: 'Caviar Dreams', sans-serif; /* Utilise Caviar Dreams comme police principale */
    margin: 0;
    padding-top: 100px;
}

h1, h2, h3 {
    font-family: 'Montserrat', sans-serif; /* Utilise Montserrat pour les titres */
}

.bold-text {
    font-family: 'Caviar Dreams', sans-serif;
    font-weight: bold;
}




:root {
    --page-max-width: 980px;
}








/* --- Header Styles --- */
.header {
    display: flex;
    flex-direction: column; /* Changer pour une colonne */
    align-items: center; /* Centre le contenu horizontalement */
    justify-content: center;
    padding: 15px 20px;
    background-color: #ffffff;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    margin: 0 auto;
    box-sizing: border-box;
}


/* Container qui limite la largeur du contenu interne */
.header .container {
    max-width: var(--page-max-width);
    width: 100%; /* S'assure que le container prend 100% de l'espace disponible */
    margin: 0 auto;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.container {
    max-width: var(--page-max-width);
    width: 100%; /* S'assure que le container prend 100% de l'espace disponible */
    margin: 0 auto;
    padding: 0 15px;
    box-sizing: border-box;
}




.header__logo {
    display: flex; /* Utilise flexbox pour aligner les éléments */
    align-items: center; /* Centre verticalement les enfants */
    height: 50px; /* Hauteur fixe pour le conteneur */
}

.user-logo {
    position: relative; /* Permet de positionner les enfants par rapport à ce conteneur */
    height: 50px; /* Hauteur fixe pour l'ensemble du logo */
    display: block; /* Utilisation de flex pour centrer le contenu */
    width: 42px;
}

.user-logo__hat,
.user-logo__mustache {
    width: 100%; /* Permet à l'image de garder sa largeur naturelle */
    height: auto; /* Limite la hauteur maximale à 50% */
    display: block;
}

.user-logo__mustache {
    transition: transform 0.8s ease; /* Ajoute une transition douce */
    transform-origin: bottom center; /* Centre la rotation en bas de l'image */
}

/* Ajout d'un effet de survol */
.user-logo:hover .user-logo__mustache {
    animation: bounce 1.5s infinite; /* Animation au survol */
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0) rotate(0deg); /* Position normale */
    }
    40% {
        transform: translateY(-10px) rotate(-10deg); /* Légère rotation vers le haut */
    }
    60% {
        transform: translateY(-5px) rotate(10deg); /* Légère rotation vers le bas */
    }
}

.user-logo:hover .user-logo__hat {
    animation: lift 1.5s infinite; /* Ajoute une animation pour le chapeau */
}

/* Ajoutez une nouvelle animation pour le mouvement du chapeau */
@keyframes lift {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0); /* Position initiale */
    }
    40% {
        transform: translateY(-10px); /* Lève le chapeau */
    }
    60% {
        transform: translateY(-5px); /* Légèrement plus bas après la levée */
    }
}



.orpps-logo {
    height: 50px; /* Définit une hauteur fixe pour l'image Orpps */
    display: block; /* Permet au lien de s'ajuster correctement */
    align-items: center; /* Centre verticalement */
    margin-left: 10px; /* Ajoute un espace entre le logo utilisateur et le logo Orpps */
}

.orpps-logo img {
    height: 100%; /* Assure que l'image prend toute la hauteur du conteneur */
    width: auto; /* Permet à l'image de garder son rapport d'aspect */
}





/* Styles pour le menu burger */
.header__burger {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 40px; /* Ajustez la hauteur selon vos besoins */
    cursor: pointer;
}

/* Au survol du burger, changer la couleur des barres */
.header__burger:hover > span {
    background-color: #CB6863; /* Couleur des barres au survol */
}

.header__burger > span {
    position: relative;
    display: block;
    height: 3px;
    border-radius: 2px;
    transition: all cubic-bezier(0.25, 0.1, 0.28, 1.54) 0.32s;
    background-color: #000; /* Couleur des barres */
}

.header__burger > span:first-child {
    width: 25px;
    margin-bottom: 7px;
}

.header__burger > span:nth-child(2) {
    width: 18px;
    margin: 0 auto 7px;
}

.header__burger > span:last-child {
    width: 25px;
    margin-bottom: 7px;
}


/* Styles pour le menu lorsqu'il est actif */
#overlayMenu {
    display: none; /* Masquer le menu par défaut */
    position: relative; /* Position absolue par rapport à son parent (header) */
    top: 100%; /* Positionné juste en dessous du header */
    left: 0;
    width: 100%;
    background-color: rgba(255, 255, 255, 1); /* Fond blanc pour le menu */
    z-index: 999; /* Assurer que le menu est au-dessus du contenu */
}

/* Styles pour le menu lorsqu'il est actif */
#overlayMenu.active {
    display: block; /* Afficher le menu lorsque actif */
}
/* ... */

